Try absolute url for cv path

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -73,7 +73,7 @@
               </li>
               {%- else %}
               <li class="nav-item {% if page.title == p.title %}active{% endif %}">
-                <a class="nav-link" href="{%- if p.title == 'cv' and site.static_cv%}{{ /assets/pdf | relative_url }}{{ p.cv_pdf }}{%- else %}{{ p.url | relative_url }}{%- endif -%}">{{ p.title }}
+                <a class="nav-link" href="{%- if p.title == 'cv' and site.static_cv%}{{ /assets/pdf | absolute_url }}{{ p.cv_pdf }}{%- else %}{{ p.url | relative_url }}{%- endif -%}">{{ p.title }}
                   {%- if page.title == p.title -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
