--- a/_includes/header.html
+++ b/_includes/header.html
@@ -78,7 +78,7 @@
 
                 <!-- TODO: Remove duplicated code here required to open static CV pdf in new tab (target = "_blank") -->
 
-                <a class="nav-link" target="_blank" href="{{ '/assets/pdf/' | relative_url }}{{ p.cv_pdf }}{{ p.url | relative_url }}{%- endif -%}">{{ p.title }}
+                <a class="nav-link" target="_blank" href="{{ '/assets/pdf/' | relative_url }}{{ p.cv_pdf }}{{ p.url | relative_url }}">{{ p.title }}
                   {%- if page.title == p.title -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
