--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
     <ul class="wrap">
         <li><a href="/">Home</a></li>
         <li><a href="/research/">Research</a></li>
-        <li><a href="/writing">Writing</a></li>
+        <li><a href="/blog">Blog</a></li>
         <li><a href="/assets/pdf/resume.pdf">Resume</a></li>
     </ul>
 </div>
