--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,6 +3,6 @@
         <li><a href="/">Home</a></li>
         <li><a href="/research/">Research</a></li>
         <li><a href="/blog">Blog</a></li>
-        <li><a href="/assets/pdf/resume.pdf">Resume</a></li>
+        <li><a href="/resume/">Resume</a></li>
     </ul>
 </div>
