--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,13 @@
     <meta name='keywords' content='{{ page.keywords }}'>
     <meta name='author' content='Gregory Gundersen'>
 
+
+    <link href='/css/common.css' rel='stylesheet' />
     <link href='/css/blog.css' rel='stylesheet' />
     <link href='/css/trac.css' rel='stylesheet' />
     <link href='/css/markdown.css' rel='stylesheet' />
 
+    {% include favicon.html %}
     {% include mathjax.html %}
 </head>
 
