--- a/_includes/favicon.html
+++ b/_includes/favicon.html
@@ -1,2 +1,2 @@
-<link rel="icon" href="{{ '/assets/img/earth.png' | relative_url }}" type="image/x-icon">
-<link rel="shortcut icon" href="{{ '/assets/img/earth.png' | relative_url }}" type="image/x-icon">
+<link rel="icon" href="{{ '/assets/img/network.png' | relative_url }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ '/assets/img/network.png' | relative_url }}" type="image/x-icon">
