Remove gray lines

--- a/css/blog.css
+++ b/css/blog.css
@@ -62,7 +62,7 @@
     padding-top: 15px;
     display: inline-block;
     font-size: 13px;
-    line-heigh: 1.2em;
+    line-height: 1.2em;
 }
 
 .article .figure .caption-label {
@@ -74,8 +74,8 @@
 }
 
 .article div.highlight {
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    /* border-top: 1px solid rgba(0, 0, 0, 0.2); this was adding the gray line
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
     font-size: 13px;
     line-height: 1.3em;
 }
