--- a/css/markdown.css
+++ b/css/markdown.css
@@ -151,7 +151,7 @@
     overflow: hidden;
 }
 
-.markdown-body code,
+/* .markdown-body code, */
 .markdown-body kbd,
 .markdown-body pre {
     font-family: monospace, monospace;
@@ -304,10 +304,10 @@
     margin-left: 0;
 }
 
-.markdown-body code {
+/* .markdown-body code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 12px;
-}
+} */
 
 .markdown-body pre {
     margin-top: 0;
@@ -545,7 +545,7 @@
     background-color: #fff;
 }
 
-.markdown-body code {
+/* .markdown-body code {
     padding: 0;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
@@ -553,19 +553,19 @@
     font-size: 85%;
     background-color: rgba(0, 0, 0, 0.04);
     border-radius: 3px;
-}
+} */
 
-.markdown-body code::before,
+/* .markdown-body code::before,
 .markdown-body code::after {
     letter-spacing: -0.2em;
     content: "\00a0";
-}
+} */
 
 .markdown-body pre {
     word-wrap: normal;
 }
 
-.markdown-body pre>code {
+/* .markdown-body pre>code {
     padding: 0;
     margin: 0;
     font-size: 100%;
@@ -573,7 +573,8 @@
     white-space: pre;
     background: transparent;
     border: 0;
-}
+} */
+
 
 .markdown-body .highlight {
     margin-bottom: 16px;
@@ -594,7 +595,7 @@
     border-radius: 3px;
 }
 
-.markdown-body pre code {
+/* .markdown-body pre code {
     display: inline;
     max-width: auto;
     padding: 0;
@@ -604,12 +605,12 @@
     word-wrap: normal;
     background-color: transparent;
     border: 0;
-}
+} */
 
-.markdown-body pre code::before,
+/* .markdown-body pre code::before,
 .markdown-body pre code::after {
     content: normal;
-}
+} */
 
 .markdown-body .pl-0 {
     padding-left: 0 !important;
