--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
     <meta charset='UTF-8'>
     <meta content='width=device-width, initial-scale=1' name='viewport' />
 
-    <meta name='description' content='Gregory Gundersen is a PhD candidate at Princeton.'>
+    <meta name='description' content=''>
     <meta name='keywords' content='{{ page.keywords }}'>
-    <meta name='author' content='Gregory Gundersen'>
+    <meta name='author' content='''>
 
-    <link href='/css/common.css' rel='stylesheet' />
+    <link href=' /css/common.css' rel='stylesheet' />
     <link href='/css/blog.css' rel='stylesheet' />
     <link href='/css/trac.css' rel='stylesheet' />
     <link href='/css/markdown.css' rel='stylesheet' />
