Update research [ci skip]

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,209 +1,1 @@
-.front-matter {
-    padding: 20px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.front-matter h4 {
-    font-family: -apple-system, Helvetica, arial, sans-serif;
-}
-
-.front-matter .bylines .byline {
-    margin-right: 20px;
-    float: left;
-}
-
-.front-matter .bylines .byline h3,
-.front-matter .bylines .byline p {
-    margin: 0;
-    font-family: -apple-system, Helvetica, arial, sans-serif;
-}
-
-.front-matter .bylines .byline h3 {
-    font-size: 9px;
-    text-transform: uppercase;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-.front-matter .bylines .byline p {
-    font-size: 10px;
-    line-height: 1.6em;
-}
-
-.article {
-    font-size: 15px;
-    line-height: 1.6em;
-    color: rgba(0, 0, 0, 0.8);
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.article blockquote {
-    margin: 0;
-    padding: 0 1em;
-    color: #777;
-    border-left: 0.25em solid #ddd;
-}
-
-.article h2 {
-    font-size: 26px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 1rem;
-    padding-top: 1em;
-}
-
-.article .figure {
-    border-top: 1px solid hsla(0, 0%, 0%, 0.2);
-    border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
-    padding: 20px 0;
-}
-
-.article .figure .caption {
-    padding-top: 15px;
-    display: inline-block;
-    font-size: 13px;
-    line-height: 1.2em;
-}
-
-.article .figure .caption-label {
-    font-weight: bold;
-}
-
-.article .footnote {
-    line-height: 0;
-}
-
-.article div.highlight {
-    /* border-top: 1px solid rgba(0, 0, 0, 0.2); this was adding the gray line
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
-    font-size: 13px;
-    line-height: 1.3em;
-}
-
-.article ul {
-    padding: 0 15px;
-}
-
-.article hr {
-    border-bottom: none;
-    border-top: 1px solid rgba(0, 0, 0, 0.7);
-    margin: 33px auto;
-    width: 70px;
-}
-
-#bibliography {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#bibliography ol.bibliography {
-    padding-left: 15px;
-    padding-top: 30px;
-    font-size: 12px;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-#blog {
-    margin-top: 80px;
-    margin-bottom: 100px;
-}
-
-#blog #intro {
-    font-size: 14px;
-    font-style: italic;
-    line-height: 1.4em;
-    margin-bottom: 40px;
-}
-
-#blog .quote {
-    margin-bottom: 30px;
-}
-
-#blog .quote p {
-    margin-bottom: 5px;
-}
-
-#blog .post-date {
-    text-transform: uppercase;
-    color: rgba(0, 0, 0, 0.7);
-    font-size: 12px;
-    font-weight: bold;
-    margin-top: 4px;
-    margin-bottom: 4px;
-}
-
-#blog .post-title {
-    display: inline-block;
-    font-weight: bold;
-    margin-bottom: 0;
-}
-
-#blog .post-title a {
-    font-size: 18px;
-    text-decoration: none;
-}
-
-#blog .post-title a:hover {
-    text-decoration: underline;
-}
-
-#blog .post-subtitle {
-    font-size: 14px;
-    margin-top: 0;
-    margin-bottom: 25px;
-    line-height: 1.5em;
-}
-
-#blog .year {
-    font-size: 18px;
-    position: relative;
-    right: 100px;
-    color: rgba(0, 0, 0, 0.5);
-    width: 100px;
-    margin-bottom: -24px;
-}
-
-#blog #y2017.year,
-#blog #y2018.year {
-    margin-top: 0px;
-}
-
-hr {
-    border-top: #ccc;
-}
-
-@media screen and (max-width: 700px) {
-    body {
-        margin: 0 7px;
-    }
-}
-
-/* Toggle Button Container */
-.toggle-code-container {
-    text-align: right;
-    /* Adjust alignment as needed */
-    padding: 10px 20px;
-    /* background-color: #282c34; */
-}
-
-/* Toggle Button */
-#toggle-code-btn {
-    /* background-color: #61dafb; */
-    /* Button color */
-    color: #282c34;
-    /* border: black;
-    padding: 8px 16px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px; */
-    transition: background-color 0.3s;
-}
-
-/* #toggle-code-btn:hover {
-    background-color: magenta;
-    /* Darker shade on hover */
-
-
-/* #toggle-code-btn:focus {
-    outline: none;
-    box-shadow: 0 0 0 2px #21a1f1;
-} */
+.front-matter{padding:20px 0;border-bottom:1px solid rgba(0,0,0,0.1);border-top:1px solid rgba(0,0,0,0.1)}.front-matter h4{font-family:-apple-system,Helvetica,arial,sans-serif}.front-matter .bylines .byline{margin-right:20px;float:left}.front-matter .bylines .byline h3,.front-matter .bylines .byline p{margin:0;font-family:-apple-system,Helvetica,arial,sans-serif}.front-matter .bylines .byline h3{font-size:9px;text-transform:uppercase;color:rgba(0,0,0,0.5)}.front-matter .bylines .byline p{font-size:10px;line-height:1.6em}.article{font-size:15px;line-height:1.6em;color:rgba(0,0,0,0.8);margin-top:50px;margin-bottom:50px}.article blockquote{margin:0;padding:0 1em;color:#777;border-left:.25em solid #ddd}.article h2{font-size:26px;border-bottom:1px solid rgba(0,0,0,0.2);padding-bottom:1rem;padding-top:1em}.article .figure{border-top:1px solid hsla(0,0,0,0.2);border-bottom:1px solid hsla(0,0,0,0.2);padding:20px 0}.article .figure .caption{padding-top:15px;display:inline-block;font-size:13px;line-height:1.2em}.article .figure .caption-label{font-weight:bold}.article .footnote{line-height:0}.article div.highlight{font-size:13px;line-height:1.3em}.article ul{padding:0 15px}.article hr{border-bottom:0;border-top:1px solid rgba(0,0,0,0.7);margin:33px auto;width:70px}#bibliography{border-top:1px solid rgba(0,0,0,0.1)}#bibliography ol.bibliography{padding-left:15px;padding-top:30px;font-size:12px;color:rgba(0,0,0,0.5)}#blog{margin-top:80px;margin-bottom:100px}#blog #intro{font-size:14px;font-style:italic;line-height:1.4em;margin-bottom:40px}#blog .quote{margin-bottom:30px}#blog .quote p{margin-bottom:5px}#blog .post-date{text-transform:uppercase;color:rgba(0,0,0,0.7);font-size:12px;font-weight:bold;margin-top:4px;margin-bottom:4px}#blog .post-title{display:inline-block;font-weight:bold;margin-bottom:0}#blog .post-title a{font-size:18px;text-decoration:none}#blog .post-title a:hover{text-decoration:underline}#blog .post-subtitle{font-size:14px;margin-top:0;margin-bottom:25px;line-height:1.5em}#blog .year{font-size:18px;position:relative;right:100px;color:rgba(0,0,0,0.5);width:100px;margin-bottom:-24px}#blog #y2017.year,#blog #y2018.year{margin-top:0}hr{border-top:#ccc}@media screen and (max-width:700px){body{margin:0 7px}}.toggle-code-container{text-align:right;padding:10px 20px}#toggle-code-btn{color:#282c34;transition:background-color .3s}
