--- a/css/about.css
+++ b/css/about.css
@@ -1,30 +1,1 @@
-h2 {
-    margin-top: 300px;
-    color: #333;
-}
-
-.profile-pic {
-    text-align: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 20px;
-}
-
-.profile-pic img {
-    width: 90px;
-    height: auto;
-}
-
-
-
-.nav-link {
-    /* display: flex; */
-    margin-right: 5px;
-    /* text-decoration: none; */
-}
-
-
-.nav-link:hover {
-    /* text-decoration: underline; */
-    color: magenta;
-}
+h2{margin-top:300px;color:#333}.profile-pic{text-align:center;margin-top:0;margin-bottom:0;margin-right:20px}.profile-pic img{width:90px;height:auto}.nav-link{margin-right:5px}.nav-link:hover{color:magenta}
