--- a/css/research.css
+++ b/css/research.css
@@ -1,14 +1,1 @@
-.nav-link {
-    /* display: flex; */
-    margin-right: 4px;
-    /* text-shadow: gray; */
-    /* color: magenta; */
-    font-weight: bold;
-    /* text-decoration: none; */
-}
-
-
-.nav-link:hover {
-    /* text-decoration: underline; */
-    color: magenta;
-}
+.nav-link{margin-right:4px;font-weight:bold}.nav-link:hover{color:magenta}
